Fix scrollbar styling

--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -67,7 +67,7 @@
   }
 
   &-body {
-    overflow: scroll;
+    overflow: auto;
     padding: 0 @gutter;
   }
 }
